--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -540,7 +540,7 @@
     },
     "communitySelect": {
       "title": "选择初始社区",
-      "hint": "选择你想加入的社区。你稍后可以切换社区。",
+      "hint": "选择你想加入的社区。你可以稍后加入更多或退出任何社区。",
       "label": "选择社区",
       "placeholder": "-- 选择一个社区 --",
       "selected": "已选择"
