fix: increase card size by 30% and fix Register button text

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -413,6 +413,10 @@
     "subtitle": "Create and register your community on the AAstar Network",
     "loading": "Loading...",
     "connectWallet": "Connect Wallet",
+    "button": {
+      "register": "Register",
+      "registering": "Registering..."
+    },
     "form": {
       "basicInfo": "Basic Information",
       "tokenSection": "Token",
