--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -413,6 +413,10 @@
     "subtitle": "在 AAstar 网络上创建并注册您的社区",
     "loading": "加载中...",
     "connectWallet": "连接钱包",
+    "button": {
+      "register": "注册",
+      "registering": "注册中..."
+    },
     "form": {
       "basicInfo": "基本信息",
       "tokenSection": "代币",
