fix: correct Register button text in i18n - change 'Register Community' to 'Register'

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -444,7 +444,7 @@
     },
     "button": {
       "registering": "Registering...",
-      "register": "Register Community"
+      "register": "Register"
     },
     "success": {
       "title": "Transaction Submitted!",
