fix: register success message display and update links to community detail and wizard

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -463,6 +463,10 @@
     },
     "success": {
       "title": "Transaction Submitted!",
+      "message": "Your community has been successfully registered!",
+      "txHash": "Transaction Hash",
+      "viewInExplorer": "View in Explorer",
+      "backToWizard": "Back to Wizard",
       "viewTx": "View Transaction"
     },
     "console": {
